# daw-livestream-helper

./: .gitignore  210107-daw-livestream-helper.graffle  LICENSE  README.md  daw-livestream-helper.bat  daw-livestream-helper.control.js  pyproject.toml  requirements.txt
daw_livestream_helper/: pyproject.toml
daw_livestream_helper/src/daw_livestream_helper/: __main__.py  aiosc_test.py  app.py  app_windows_test.py  python-twitch-irc-demo.py  twitchio_test.py
daw_livestream_helper/src/daw_livestream_helper.dist-info/: METADATA
daw_livestream_helper/src/daw_livestream_helper/resources/: daw_livestream_helper.icns
docs/: 210107-daw-livestream-helper.graffle
