[tool.poetry]
name = "daw-livestream-helper"
version = "0.1.0"
description = ""
authors = ["Jarkko Saltiola <jarkko.saltiola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arrow = "1.3.0"
binaryornot = "0.4.4"
briefcase = "0.3.16"
build = "1.0.3"
certifi = "2023.7.22"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cookiecutter = "2.4.0"
dmgbuild = "1.6.1"
ds-store = "1.3.1"
gitdb = "4.0.11"
gitpython = "3.1.40"
idna = "3.4"
iniconfig = "2.0.0"
jinja2 = "3.1.2"
mac-alias = "2.2.2"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
mdurl = "0.1.2"
packaging = "23.2"
platformdirs = "3.11.0"
pluggy = "1.3.0"
psutil = "5.9.6"
pygments = "2.16.1"
pyproject-hooks = "1.0.0"
pytest = "7.4.3"
python-dateutil = "2.8.2"
python-slugify = "8.0.1"
pyyaml = "6.0.1"
requests = "2.31.0"
rich = "13.6.0"
rubicon-objc = "0.4.7"
six = "1.16.0"
smmap = "5.0.1"
std-nslog = "1.0.3"
text-unidecode = "1.3"
toga-cocoa = "0.3.1"
toga-core = "0.3.1"
tomli-w = "1.0.0"
travertino = "0.3.0"
types-python-dateutil = "2.8.19.14"
urllib3 = "2.0.7"
aiosc = "^0.1.5"
twitchio = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
